Added AdminToolsCommand + improved config